---
source: crates/oxvg_optimiser/src/jobs/add_classes_to_s_v_g_element.rs
expression: "test_config(r#\"{ \"addClassesToSVGElement\": {\n            \"className\": \"mySvg size-big\"\n        } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" class=\"mySvg\">\n    <!-- Should avoid adding existing classes -->\n    test\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" class="mySvg size-big">
    <!-- Should avoid adding existing classes -->
    test
</svg>
